// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination Event Pagination onPageChange - next 1`] = `
<div
  class="at-pagination"
>
  <div
    class="at-pagination__btn-prev"
  >
    <div
      class="at-button at-button--small"
    >
      <!---->
      <div
        class="at-button__text"
      >
        
        pre
        
      </div>
    </div>
  </div>
  <div
    class="at-pagination__number"
  >
    <span
      class="at-pagination__number-current text"
    >
      2
    </span>
    /
    3
  </div>
  <div
    class="at-pagination__btn-next"
  >
    <div
      class="at-button at-button--small"
    >
      <!---->
      <div
        class="at-button__text"
      >
        
        next
        
      </div>
    </div>
  </div>
</div>
`;

exports[`Pagination Event Pagination onPageChange - prev 1`] = `
<div
  class="at-pagination"
>
  <div
    class="at-pagination__btn-prev"
  >
    <div
      class="at-button at-button--small"
    >
      <!---->
      <div
        class="at-button__text"
      >
        
        pre
        
      </div>
    </div>
  </div>
  <div
    class="at-pagination__number"
  >
    <span
      class="at-pagination__number-current text"
    >
      2
    </span>
    /
    5
  </div>
  <div
    class="at-pagination__btn-next"
  >
    <div
      class="at-button at-button--small"
    >
      <!---->
      <div
        class="at-button__text"
      >
        
        next
        
      </div>
    </div>
  </div>
</div>
`;

exports[`Pagination Event Pagination onPageChange not to be called(disabled prev or next) 1`] = `
<div
  class="at-pagination"
>
  <div
    class="at-pagination__btn-prev"
  >
    <div
      class="at-button at-button--small at-button--disabled"
    >
      <!---->
      <div
        class="at-button__text"
      >
        
        pre
        
      </div>
    </div>
  </div>
  <div
    class="at-pagination__number"
  >
    <span
      class="at-pagination__number-current text"
    >
      1
    </span>
    /
    1
  </div>
  <div
    class="at-pagination__btn-next"
  >
    <div
      class="at-button at-button--small at-button--disabled"
    >
      <!---->
      <div
        class="at-button__text"
      >
        
        next
        
      </div>
    </div>
  </div>
</div>
`;

exports[`Pagination Snap render Pagination -- props current 1`] = `
<div
  class="at-pagination"
>
  <div
    class="at-pagination__btn-prev"
  >
    <div
      class="at-button at-button--small at-button--disabled"
    >
      <!---->
      <div
        class="at-button__text"
      >
        
        pre
        
      </div>
    </div>
  </div>
  <div
    class="at-pagination__number"
  >
    <span
      class="at-pagination__number-current text"
    >
      2
    </span>
    /
    1
  </div>
  <div
    class="at-pagination__btn-next"
  >
    <div
      class="at-button at-button--small at-button--disabled"
    >
      <!---->
      <div
        class="at-button__text"
      >
        
        next
        
      </div>
    </div>
  </div>
</div>
`;

exports[`Pagination Snap render Pagination -- props icon 1`] = `
<div
  class="at-pagination at-pagination--icon"
>
  <div
    class="at-pagination__btn-prev"
  >
    <div
      class="at-button at-button--small at-button--disabled"
    >
      <!---->
      <div
        class="at-button__text"
      >
        
        <div
          class="at-icon at-icon-chevron-left text"
        />
        
      </div>
    </div>
  </div>
  <div
    class="at-pagination__number"
  >
    <span
      class="at-pagination__number-current text"
    >
      1
    </span>
    /
    1
  </div>
  <div
    class="at-pagination__btn-next"
  >
    <div
      class="at-button at-button--small at-button--disabled"
    >
      <!---->
      <div
        class="at-button__text"
      >
        
        <div
          class="at-icon at-icon-chevron-right text"
        />
        
      </div>
    </div>
  </div>
</div>
`;

exports[`Pagination Snap render Pagination -- props pageSize 1`] = `
<div
  class="at-pagination"
>
  <div
    class="at-pagination__btn-prev"
  >
    <div
      class="at-button at-button--small at-button--disabled"
    >
      <!---->
      <div
        class="at-button__text"
      >
        
        pre
        
      </div>
    </div>
  </div>
  <div
    class="at-pagination__number"
  >
    <span
      class="at-pagination__number-current text"
    >
      1
    </span>
    /
    1
  </div>
  <div
    class="at-pagination__btn-next"
  >
    <div
      class="at-button at-button--small at-button--disabled"
    >
      <!---->
      <div
        class="at-button__text"
      >
        
        next
        
      </div>
    </div>
  </div>
</div>
`;

exports[`Pagination Snap render Pagination -- props total 1`] = `
<div
  class="at-pagination"
>
  <div
    class="at-pagination__btn-prev"
  >
    <div
      class="at-button at-button--small at-button--disabled"
    >
      <!---->
      <div
        class="at-button__text"
      >
        
        pre
        
      </div>
    </div>
  </div>
  <div
    class="at-pagination__number"
  >
    <span
      class="at-pagination__number-current text"
    >
      1
    </span>
    /
    5
  </div>
  <div
    class="at-pagination__btn-next"
  >
    <div
      class="at-button at-button--small"
    >
      <!---->
      <div
        class="at-button__text"
      >
        
        next
        
      </div>
    </div>
  </div>
</div>
`;

exports[`Pagination Snap render Pagination -- props total change 1`] = `
<div
  class="at-pagination at-pagination--icon"
>
  <div
    class="at-pagination__btn-prev"
  >
    <div
      class="at-button at-button--small at-button--disabled"
    >
      <!---->
      <div
        class="at-button__text"
      >
        
        <div
          class="at-icon at-icon-chevron-left text"
        />
        
      </div>
    </div>
  </div>
  <div
    class="at-pagination__number"
  >
    <span
      class="at-pagination__number-current text"
    >
      1
    </span>
    /
    2
  </div>
  <div
    class="at-pagination__btn-next"
  >
    <div
      class="at-button at-button--small"
    >
      <!---->
      <div
        class="at-button__text"
      >
        
        <div
          class="at-icon at-icon-chevron-right text"
        />
        
      </div>
    </div>
  </div>
</div>
`;
